# password-game-bot

./: Cargo.toml  README.md
src/: main.rs
src/driver/: mod.rs
src/driver/direct/: game_logic.rs  mod.rs
src/driver/web/: helpers.rs  mod.rs  osascript.rs  tests.rs  winapi.rs
src/game/: data.rs  helpers.rs  mod.rs  rule.rs  state.rs
src/game/data/: captchas.txt  chess_moves.txt  chess_puzzles.txt  coordinates.txt  countries.txt
src/game/tests/: rules.rs
src/password/: change.rs  format.rs  helpers.rs  mod.rs  mutable.rs  protected.rs
src/solver/: mod.rs  tests.rs
src/youtube/: api.rs  main.rs  videos.json  web.rs
